<resources>
    <string name="app_name">Ayo Lomba</string>
    <string name="hint_til_email">Email</string>
    <string name="hint_til_password">Password</string>
    <string name="txtbtn_login">MASUK</string>
    <string name="txtbtn_register">DAFTAR</string>
    <string name="title_register">Buat Akun</string>
    <string name="hint_et_email">Alamat Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Ketik Ulang Password</string>
    <string name="txtbtn_submit">KIRIM</string>

    <!--//Menu Bottom Navigation-->
    <string name="home">Beranda</string>
    <string name="favorite">Favorit</string>
    <string name="account">Profil</string>
    <string name="your_name"><u>Nama Anda</u>.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
